chore: fix alignments

--- a/projects/kit/components/input-tag/input-tag.style.less
+++ b/projects/kit/components/input-tag/input-tag.style.less
@@ -74,9 +74,9 @@
 
     &_left {
         padding: 0;
-        margin: 0 0.5rem 0 -0.25rem;
-        margin-inline-start: -0.25rem;
-        margin-inline-end: 0.5rem;
+        margin: 0 0.6rem 0 -0.4rem;
+        margin-inline-start: -0.4rem;
+        margin-inline-end: 0.6rem;
     }
 
     &_right {
